# FDK

./: .gitignore  CLAUDE.md  ImplementationPlan.txt  Makefile  OldAppReport.txt  README.md  analysis_options.yaml  api-trace-report.md  assets_manifest.yaml  build.yaml  diff.txt  log.txt  memoryissue.txt  pubspec.yaml  upload-keystore.jks
android/: gradle.properties
android/app/src/main/cpp/: CMakeLists.txt  README.md  iperf3_jni.cpp
android/app/src/main/cpp/iperf3/src/: iperf_client_api.c
assets/: README.md  mac_unified.csv
docs/: APP_ENTRY_POINTS.md  ARCHITECTURE.md  ARCHITECTURE_VERIFICATION.md  COMPLETE_MOCK_DATA_ALIGNMENT_PLAN.md  CONTRIBUTING.md  DEBUG_DEVICES_29AUG2025.txt  EXHAUSTIVE_VERIFICATION_REPORT.md  FIELD_SELECTION_FINAL_IMPLEMENTATION_PLAN.md  FIELD_SELECTION_IMPLEMENTATION_EXACT_PLAN.md  FIELD_SELECTION_IMPLEMENTATION_PLAN.md  FINAL_ARCHITECTURE_SUMMARY.md  FINAL_IMPLEMENTATION_VERIFICATION.md  FIX_IP_MAC_FIELD_NAMES.md  HONEST_ASSESSMENT_OF_LAST_COMMIT.md  IMPLEMENTATION_SUMMARY.md  IPERF3_IMPLEMENTATION.md  MOCK_DATA_ALIGNMENT_PLAN.md  MOCK_DATA_PRODUCTION_FORMAT.md  ONBOARDING_STATE_IMPLEMENTATION_PLAN.md  QA_TESTING_CHECKLIST.md  README.md  README_RUNNING_APP.md  REFACTORING_NEXT_STEPS.md  REFACTORING_PLAN_PHASE_2.md  ROOM_DATA_FIXES.md  ROOM_DISPLAY_FIX_COMPLETE.md  ROOM_FIX_NO_FALLBACKS.md  ROOM_FIX_PROPAGATION_COMPLETE.md  SIMPLIFICATION_CHANGES.md  UNIFIED_ARCHITECTURE_PLAN.md  api-contracts.md  api-discovery-report.md  api_fields_reference.md  authentication-flow.md  certificate-handling.md  cicd-pipeline.md  clean-architecture.md  data-flow-architecture.md  data-models.md  dependencies.md  (+20 more)
integration_test/: app_test.dart
lib/: main.dart  main_development.dart  main_production.dart  main_staging.dart  main_staging_debug.dart
linux/: CMakeLists.txt
native/: README.md
scripts/: CACHE_FIX_IMPLEMENTATION_SUMMARY.md  CRASH_DIAGNOSIS_SUMMARY.md  FIX_SUMMARY.md  ROOM_DEVICES_SPINNER_BUG_REPORT.md  ROOM_DEVICES_SPINNING_DIAGNOSIS.md  STAGING_DIAGNOSIS_SUMMARY.md  analyze_api_performance.py  analyze_api_performance_v2.py  (+154 more)
(+913 files in other folders)
